fixing padding on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,10 @@
 body {
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
   @apply bg-black;
+}
+.main {
+  padding-left: env(safe-area-inset-left, 0);
+  padding-right: env(safe-area-inset-right, 0);
+  padding-top: env(safe-area-inset-top, 0);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
